[gd_scene load_steps=13 format=2]

[ext_resource path="res://Enemies/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemies/Bart.gd" type="Script" id=2]
[ext_resource path="res://Enemies/Bart.png" type="Texture" id=3]

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

uniform vec4 flash_color: hint_color = vec4(1.0);
uniform float flash_modifier: hint_range(0.0, 1.0) = 1.0;

void fragment() {
	vec4 color = texture(TEXTURE, UV);
	color.rgb = mix(color.rgb, flash_color.rgb, flash_modifier);
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=10]
resource_local_to_scene = true
shader = SubResource( 2 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="CircleShape2D" id=3]
radius = 17.0294

[sub_resource type="Animation" id=4]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=5]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 0 ]
}

[sub_resource type="Animation" id=6]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="CircleShape2D" id=7]
radius = 13.0

[sub_resource type="CircleShape2D" id=8]
radius = 12.0416

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 204, 72 )

[node name="Bart" instance=ExtResource( 1 )]
collision_layer = 16
collision_mask = 16
script = ExtResource( 2 )
maxSpeed = 80
sizeScale = 0.7
acceleration = 215

[node name="Sprite" parent="." index="0"]
material = SubResource( 10 )
texture = ExtResource( 3 )
offset = Vector2( 0, -5 )
flip_h = true
hframes = 5
frame = 4

[node name="CollisionShape2D" parent="." index="1"]
shape = SubResource( 3 )

[node name="AnimationPlayer" parent="." index="2"]
autoplay = "Hang"
anims/Fall = SubResource( 4 )
anims/Fly = SubResource( 5 )
anims/Hang = SubResource( 6 )

[node name="HurtBox" parent="." index="3"]
collision_mask = 0

[node name="CollisionShape2D" parent="HurtBox" index="0"]
shape = SubResource( 7 )

[node name="EnemyStats" parent="." index="4"]
maxHealth = 2

[node name="HitBox" parent="." index="5"]
collision_mask = 2147483652
damage = 3
knockback = 100.0

[node name="CollisionShape2D" parent="HitBox" index="0"]
shape = SubResource( 8 )

[node name="PlayerDetector" type="Area2D" parent="." index="7"]
visible = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector" index="0"]
position = Vector2( 0, 60 )
shape = SubResource( 9 )

[node name="FallTimer" type="Timer" parent="." index="8"]
wait_time = 0.25
one_shot = true

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="timeout" from="FallTimer" to="." method="_on_FallTimer_timeout"]

[editable path="HurtBox"]
[editable path="HitBox"]
